Feat: Add Google authentication and JWT token generation
Updated IdentityController to support Google login and callback handling. Configured Google authentication in Program.cs and added necessary CORS policies. Updated project dependencies for Google and JWT authentication. Modified appsettings.json to include Google client credentials. Enhanced IAuthenticationRepository and AuthenticationRepository to implement JWT token generation.

--- a/StockManagement.API/appsettings.json
+++ b/StockManagement.API/appsettings.json
@@ -14,6 +14,12 @@
     "Secret": "JwT$3cr3tK3y!2024#St0ck!ThisIsALongerKeyForRefreshToken",
     "ExpirationInDays": 7
   },
+  "Authentication": {
+    "Google": {
+      "ClientId": "130111298943-7a2fbf8hesc26hjsghg5l0tft20banvp.apps.googleusercontent.com",
+      "ClientSecret": "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"
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
