--- a/StockManagement.Application/StockManagement.Application.csproj
+++ b/StockManagement.Application/StockManagement.Application.csproj
@@ -19,4 +19,8 @@
     <ProjectReference Include="..\StockManagement.Shared\StockManagement.Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="CQRS\Command\" />
+  </ItemGroup>
+
 </Project>
