Feat: Add ListSymbol endpoint and pagination support
- Implemented a new `ListSymbol` endpoint in `OhlcController.cs` for fetching symbols with request validation and error handling.
- Updated `appsettings.json` to set Google authentication credentials to empty strings for future configuration.
- Modified `ListCandleQuery.cs` and `ListCandleQueryDTO.cs` to replace `Symbol` with `SymbolID` and added pagination properties (`PageSize`, `PageNumber`).
- Enhanced `AutoMapperProfile.cs` to include mappings for `ListSymbolQuery` and `ListSymbolQueryDTO`.
- Changed properties in `assets.cs` to nullable types.
- Updated `IOhlcRepository.cs` to include a new method for listing symbols.
- Implemented the `ListSymbol` method in `OhlcRepository.cs` to retrieve paginated asset data.
- Added `ListSymbolQuery.cs` and its handler for processing symbol queries.
- Created `AssetDTO.cs` for data transfer and `ListSymbolQueryDTO.cs` for query structure.
- Introduced `PaginatedData.cs` to encapsulate paginated results, with a minor bug in the constructor to be fixed.

--- a/StockManagement.API/appsettings.json
+++ b/StockManagement.API/appsettings.json
@@ -16,8 +16,8 @@
   },
   "Authentication": {
     "Google": {
-      "ClientId": "130111298943-7a2fbf8hesc26hjsghg5l0tft20banvp.apps.googleusercontent.com",
-      "ClientSecret": "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"
+      "ClientId": "",
+      "ClientSecret": ""
     }
   },
   "Logging": {
